[package]
name = "superdevs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
solana-sdk = "1.16.0" 
solana-client = "1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.0.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base58 = "0.2.0"
base64 = "0.21.0"
thiserror = "1.0"